// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`isAlpha - empty 1`] = `null`;

exports[`isAlpha - invalid alpha 1`] = `
Object {
  "code": "Validation.Strings.isAlpha",
  "message": "Only alpha characters are allowed",
  "params": Array [],
}
`;

exports[`isAlpha - valid alpha 1`] = `null`;

exports[`isEmail - empty 1`] = `null`;

exports[`isEmail - invalid email 1`] = `
Object {
  "code": "Validation.Strings.isEmail",
  "message": "Invalid email address",
  "params": Array [],
}
`;

exports[`isEmail - valid email 1`] = `null`;

exports[`minLength - empty 1`] = `null`;

exports[`minLength - invalid sentence 1`] = `
Object {
  "code": "Validation.Strings.minLength",
  "message": "Must have at least 5 characters",
  "params": Array [
    5,
  ],
}
`;

exports[`minLength - valid sentence 1`] = `null`;

exports[`minWords - empty 1`] = `null`;

exports[`minWords - invalid sentence 1`] = `
Object {
  "code": "Validation.Strings.minWords",
  "message": "Must have at least 2 words",
  "params": Array [
    2,
  ],
}
`;

exports[`minWords - valid sentence 1`] = `null`;
